--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,24 @@
 /*  */
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+}
+
+:root {
+  --text-color: #7e7d88;
+  --text-font-size: 16px;
+  --font-weight-400: 400;
+  --font-weight-600: 600;
+  --font-weight-700: 700;
+  --background-orange-active: #ff7506;
 }
