--- a/src/index.scss
+++ b/src/index.scss
@@ -11,14 +11,26 @@ html {
 }
 
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: "Nunito", sans-serif !important;
 }
 
 :root {
-  --text-color: #7e7d88;
+  --text-color-gray-300: #7e7d88;
+  --text-color-gray-4: #7e7d88;
   --text-font-size: 16px;
   --font-weight-400: 400;
   --font-weight-600: 600;
   --font-weight-700: 700;
-  --background-orange-active: #ff7506;
+  --background-orange-500: #ff7506;
+  --background-orange-400: #ff9138;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
