--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@ body {
 
 :root {
   --text-color-gray-300: #7e7d88;
+  --text-color-gray-3: #a9a9b0;
   --text-color-gray-4: #7e7d88;
   --text-font-size: 16px;
   --font-weight-400: 400;
@@ -23,6 +24,7 @@ body {
   --font-weight-700: 700;
   --background-orange-500: #ff7506;
   --background-orange-400: #ff9138;
+  --background-orange-50: #fff2e7;
 }
 
 h1,
