--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,47 +1,47 @@
-.homepage {
-  width: 1440px;
-  height: 810px;
-  border-radius: 16px;
-  background-color: #f7f7f7;
-  .monitor {
-    display: flex;
-    width: 176px;
-    height: 48px;
-    padding: 0 12px;
+// .homepage {
+//   width: 1440px;
+//   height: 810px;
+//   border-radius: 16px;
+//   background-color: #f7f7f7;
+//   .monitor {
+//     display: flex;
+//     width: 176px;
+//     height: 48px;
+//     padding: 0 12px;
 
-    // &:active {
-    //   background-color: var(--background-orange-active);
-    // }
-    span {
-      margin-right: 8px;
-    }
+//     // &:active {
+//     //   background-color: var(--background-orange-active);
+//     // }
+//     span {
+//       margin-right: 8px;
+//     }
 
-    img {
-      width: 20px;
-      height: 20px;
-      margin: 14px 0;
-    }
+//     img {
+//       width: 20px;
+//       height: 20px;
+//       margin: 14px 0;
+//     }
 
-    &-text {
-      color: var(--text-color-gray-300);
-      font-weight: var(--font-weight-600);
-      font-size: var(--text-font-size);
-      line-height: calc(24 / 16);
-      margin: 12px 0;
-    }
-  }
-}
-.ant-tabs-tab {
-  width: 200px;
-  height: 48px;
-}
+//     &-text {
+//       color: var(--text-color-gray-300);
+//       font-weight: var(--font-weight-600);
+//       font-size: var(--text-font-size);
+//       line-height: calc(24 / 16);
+//       margin: 12px 0;
+//     }
+//   }
+// }
+// .ant-tabs-tab {
+//   width: 200px;
+//   height: 48px;
+// }
 
-.ant-tabs-tab.ant-tabs-tab-active {
-  background-color: var(--background-orange-500);
-  .monitor {
-    &-text {
-      color: #ffffff;
-      font-weight: var(--font-weight-700);
-    }
-  }
-}
+// .ant-tabs-tab.ant-tabs-tab-active {
+//   background-color: var(--background-orange-500);
+//   .monitor {
+//     &-text {
+//       color: #ffffff;
+//       font-weight: var(--font-weight-700);
+//     }
+//   }
+// }
