--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,26 @@
 /*  */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+body {
+  font-family: 'Nunito', sans-serif !important;
+}
+:root {
+  --text-color-white: #ffffff;
+  --text-color-gray-300: #7e7d88;
+  --text-color-gray-3: #a9a9b0;
+  --text-color-gray-4: #7e7d88;
+  --text-color-orange-300: #ff9138;
+  --text-color-orange-400: #ff7506;
+  --text-font-size: 16px;
+  --font-weight-400: 400;
+  --font-weight-600: 600;
+  --font-weight-700: 700;
+  --background-orange-500: #ff7506;
+  --background-orange-400: #ff9138;
+  --background-orange-50: #fff2e7;
 }
