building add, detail Device page

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,16 +15,41 @@ body {
 }
 
 :root {
+  --text-color-orange-500: #ff7506;
+  --text-color-orange-400: #ff9138;
+  --text-color-orange-50: #fff2e7;
+
+  --text-color-gray-200: #a9a9b0;
   --text-color-gray-300: #7e7d88;
+  --text-color-gray-400: #535261;
+  --text-color-gray-500: #282739;
   --text-color-gray-3: #a9a9b0;
   --text-color-gray-4: #7e7d88;
-  --text-font-size: 16px;
-  --font-weight-400: 400;
-  --font-weight-600: 600;
-  --font-weight-700: 700;
+
+  --text-white: #ffffff;
+
+  --background-wrapper: #f7f7f7;
+  --background-white: #ffffff;
+
   --background-orange-500: #ff7506;
   --background-orange-400: #ff9138;
   --background-orange-50: #fff2e7;
+  --background-red: #ff4747;
+
+  --text-font-size-14: 14px;
+  --text-font-size-16: 16px;
+  --text-font-size-20: 20px;
+  --text-font-size-24: 24px;
+
+  --text-font-style-normal: normal;
+
+  --font-weight-400: 400;
+  --font-weight-600: 600;
+  --font-weight-700: 700;
+
+  --box-shadow-btn: 0px 0px 6px #e7e9f2;
+
+  --border-radius-btn: 8px;
 }
 
 h1,
