--- a/src/pages/components/Sidebar/styles.scss
+++ b/src/pages/components/Sidebar/styles.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 200px;
   height: 810px;
-  margin-right: 24px;
+  // margin-right: 24px;
 
   &--logo {
     margin-top: 32px;
