--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -1,6 +1,6 @@
-#components-layout-demo-side .logo {
-  height: 32px;
-  margin: 16px;
+.logo {
+  // height: 32px;
+  margin: 32px;
   background: rgba(255, 255, 255, 0.3);
 }
 
