--- a/src/components/Sidebar/styles.scss
+++ b/src/components/Sidebar/styles.scss
@@ -2,6 +2,7 @@
   // height: 32px;
   margin: 32px;
   background: rgba(255, 255, 255, 0.3);
+  text-align: center;
 }
 
 .site-layout .site-layout-background {
