--- a/src/pages/components/Devices/AddDevice/styles.scss
+++ b/src/pages/components/Devices/AddDevice/styles.scss
@@ -1,10 +1,12 @@
 .device--group {
   //
+  height: 100vh;
   margin-left: 24px;
+
   &__wrapper {
     width: 100%;
     max-width: 1152px;
-    height: 550px;
+    max-height: 550px;
     background: var(--background-white);
     margin-top: 16px !important;
   }
@@ -107,7 +109,7 @@
       color: var(--text-color-gray-300);
 
       &::before {
-        content: "*";
+        content: '*';
         color: var(--background-red);
         width: 6px;
         height: 6px;
