--- a/src/pages/components/Devices/styles.scss
+++ b/src/pages/components/Devices/styles.scss
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 1112px;
   margin-top: 29px;
-
+  margin-left: 24px;
   &--title {
     display: initial;
     width: 200px;
@@ -44,12 +44,8 @@
       .ant-pagination-item {
         border: none;
       }
-      .ant-pagination-jump-prev
-        .ant-pagination-item-container
-        .ant-pagination-item-ellipsis,
-      .ant-pagination-jump-next
-        .ant-pagination-item-container
-        .ant-pagination-item-ellipsis {
+      .ant-pagination-jump-prev .ant-pagination-item-container .ant-pagination-item-ellipsis,
+      .ant-pagination-jump-next .ant-pagination-item-container .ant-pagination-item-ellipsis {
         color: #7e7d88;
         transform: translateY(10px);
         font-weight: var(--font-weight-600);
