--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,7 @@ body {
   --background-white: #ffffff;
 
   --background-orange-500: #ff7506;
+  --background-orange-300: #ffac6a;
   --background-orange-400: #ff9138;
   --background-orange-50: #fff2e7;
   --background-red: #ff4747;
