--- a/src/pages/Devices/UpdateDevice/styles.scss
+++ b/src/pages/Devices/UpdateDevice/styles.scss
@@ -1,12 +1,13 @@
-.device--group {
+.device--group__update {
   //
   height: 100vh;
   margin-left: 24px;
   width: 1440px;
+
   &__wrapper {
     width: 100%;
     max-width: 1152px;
-    max-height: 550px;
+    max-height: 556px;
     background: var(--background-white);
     margin-top: 16px !important;
   }
@@ -58,18 +59,31 @@
     }
 
     &__service {
+      position: relative;
       width: 1104px;
-      height: 44px;
+      height: 80px;
       &::placeholder {
         font-weight: var(--text-color-gray-200);
         font-size: var(--text-font-size-16);
         line-height: calc(24 / 16);
+      }
+
+      //tags
+      &--tags {
+        width: 1104px;
+        position: absolute;
+        bottom: 0%;
+        right: 0%;
+        top: 8px;
+        left: 50%;
+        transform: translateX(-38%);
       }
     }
 
     &__btn {
       display: flex;
       justify-content: center;
+      margin-top: 24px;
 
       &--default {
         width: 147px;
@@ -170,4 +184,29 @@
   font-weight: var(--text-color-gray-200);
   font-size: var(--text-font-size-16);
   line-height: calc(24 / 16);
+}
+
+//antd tags
+.ant-tag {
+  width: 165px;
+  height: 28px !important;
+  background: var(--background-orange-300) !important;
+  color: var(--text-white) !important;
+  box-shadow: 0px 0px 6px #e7e9f2;
+  border-radius: 9px !important;
+  text-align: center !important;
+  display: inline-flex !important;
+  // flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: var(--text-font-size-14) !important;
+  font-weight: var(--font-weight-700);
+}
+.ant-tag-close-icon {
+  color: var(--text-white) !important;
+  padding: 4px 4px;
+}
+.anticon svg {
+  height: 15px;
+  width: 15px;
 }
