--- a/src/pages/GiveNumber/styles.scss
+++ b/src/pages/GiveNumber/styles.scss
@@ -1,4 +1,4 @@
-.device {
+.GN {
   width: 100%;
   max-width: 1440px;
   margin-top: 29px;
@@ -19,10 +19,9 @@
     max-width: 1112px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    // justify-content: space-between;
 
-    margin-top: 16px;
-    margin-bottom: 16px;
+    margin: 16px 0;
 
     &--default {
       font-size: 16px;
@@ -31,12 +30,10 @@
       margin-bottom: 4px;
     }
 
-    &--operating {
+    &--services,
+    &--condition,
+    &--supply {
       margin-right: 24px;
-    }
-
-    &--connect {
-      margin-right: 188px;
     }
   }
 
@@ -135,6 +132,7 @@ button,
 html [type='button'],
 [type='reset'],
 [type='submit'] {
+  height: 44px;
   background: var(--text-white);
   border: 1.5px solid #d4d4d7;
   border-radius: 8px;
@@ -167,4 +165,7 @@ html [type='button'],
 
 .ant-pagination-item {
   background-color: #f0f2f5 !important;
+}
+.ant-table table {
+  text-align: center !important;
 }
